@@ -1,4 +1,6 @@
 builderdir = $(datadir)/nautilus-sound-converter
-builder_DATA = main.xml
+builder_DATA =		\
+	main.xml	\
+	progress.xml
 	
 EXTRA_DIST = $(builder_DATA)
